--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,21 +1,26 @@
 -i https://pypi.org/simple
-astroid==2.1.0
-atomicwrites==1.2.1
-attrs==18.2.0
+astroid==2.2.5
+atomicwrites==1.3.0
+attrs==19.1.0
 fancycompleter==0.8
-isort==4.3.4
-lazy-object-proxy==1.3.1
+importlib-metadata==0.23
+isort==4.3.21
+lazy-object-proxy==1.4.2
 mccabe==0.6.1
-more-itertools==5.0.0
-pdbpp==0.9.3
-pluggy==0.8.0
-py==1.7.0
-pygments==2.3.1
-pylint==2.2.2
-pytest==4.0.2
-rope==0.11.0
+more-itertools==7.2.0
+packaging==19.1
+pdbpp==0.10.0
+pluggy==0.13.0
+py==1.8.0
+pygments==2.4.2
+pylint==2.3.1
+pyparsing==2.4.2
+pytest==5.1.2
+rope==0.14.0
 six==1.12.0
-typed-ast==1.1.1 ; python_version < '3.7' and implementation_name == 'cpython'
+typed-ast==1.4.0 ; implementation_name == 'cpython'
+wcwidth==0.1.7
 wmctrl==0.3
-wrapt==1.10.11
-yapf==0.25.0
+wrapt==1.11.2
+yapf==0.28.0
+zipp==0.6.0
