--- a/requirements.txt
+++ b/requirements.txt
@@ -1,51 +1,57 @@
 -i https://pypi.org/simple
-amqp==2.3.2
-aniso8601==4.0.1
+amqp==2.5.1
+aniso8601==8.0.0
 appdirs==1.4.3
-beautifulsoup4==4.6.3
-billiard==3.5.0.5
+attrs==19.1.0
+beautifulsoup4==4.8.0
+billiard==3.6.1.0
 blinker==1.4
 bs4==0.0.1
-celery[redis]==4.2.1
-certifi==2018.11.29
+celery[redis]==4.3.0
+certifi==2019.9.11
 chardet==3.0.4
 click==7.0
-cssselect==1.0.3
-dynaconf[yaml]==1.2.0
+cssselect==1.1.0
+dynaconf[yaml]==2.1.1
 fake-useragent==0.1.11
 flask-mongoengine==0.9.5
-flask-restplus==0.12.1
+flask-restplus==0.13.0
 flask-wtf==0.14.2
-flask==1.0.2
+flask==1.1.1
 gunicorn==19.9.0
 idna==2.8
+importlib-metadata==0.23
 itsdangerous==1.1.0
-jinja2==2.10
-jsonschema==2.6.0
-kombu==4.2.2
-lxml==4.2.5
-markupsafe==1.1.0
+jinja2==2.10.1
+jsonschema==3.0.2
+kombu==4.6.4
+lxml==4.4.1
+markupsafe==1.1.1
 marshmallow-mongoengine==0.9.1
-marshmallow==2.17.0
-mongoengine==0.16.3
-parse==1.9.0
-pyee==5.0.0
-pymongo==3.7.2
+marshmallow==3.2.0
+mongoengine==0.18.2
+more-itertools==7.2.0
+parse==1.12.1
+pyee==6.0.0
+pymongo==3.9.0
 pyppeteer==0.0.25
 pyquery==1.4.0
-python-box==3.2.3
-python-dotenv==0.10.1
-pytz==2018.7
-pyyaml==3.13
-redis==3.0.1
-requests-html==0.9.0
-requests==2.21.0
+pyrsistent==0.15.4
+python-box==3.4.3
+python-dotenv==0.10.3
+pytz==2019.2
+pyyaml==5.1.2
+redis==3.3.8
+requests-html==0.10.0
+requests==2.22.0
 six==1.12.0
+soupsieve==1.9.3
 toml==0.10.0
-tqdm==4.28.1
-urllib3==1.24.1
-vine==1.1.4
-w3lib==1.19.0
-websockets==7.0
-werkzeug==0.14.1
+tqdm==4.36.0
+urllib3==1.25.3
+vine==1.3.0
+w3lib==1.21.0
+websockets==8.0.2
+werkzeug==0.15.6
 wtforms==2.2.1
+zipp==0.6.0
