--- a/Pipfile
+++ b/Pipfile
@@ -29,4 +29,4 @@ celery = {version = "*",extras = ["redis"]}
 gunicorn = "*"
 flask-mongoengine = "*"
 blinker = "*"
-flask-restplus = "==0.12.1"
+flask-restplus = "*"
