--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,7 @@ pdbpp = "*"
 celery = "celery -A scrapy_api.celery.app worker --loglevel=debug"
 routes = "flask routes"
 dev = "flask run"
+debug = "flask run --no-reload"
 gunicorn = "gunicorn -c gunicorn.py scrapy_api.wsgi:app"
 clean = "find . -type f -name \"*.py[co]\" -delete -or -type d -name \"__pycache__\" -delete"
 docker-up = "docker-compose up"
@@ -30,3 +31,4 @@ gunicorn = "*"
 flask-mongoengine = "*"
 blinker = "*"
 flask-restplus = "*"
+flask = "*"
