Modified models, document and image apis

--- a/Pipfile
+++ b/Pipfile
@@ -30,5 +30,5 @@ celery = {version = "*",extras = ["redis"]}
 gunicorn = "*"
 flask-mongoengine = "*"
 blinker = "*"
-flask-restplus = "*"
+flask-restplus = "==0.12.1"
 flask = "*"
